--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+.homeWrap {
+  padding: 20px;
+  width: 30%;
+  margin: auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.homeWrap input {
+  width: 100%;
+  height: 50px;
+  border: 1px solid #868686;
+  border-radius: 4px;
+  margin: auto;
+  padding: 0 20px;
+  display: block;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  outline: none;
+  background-color: #358c9b;
+  display: block;
+  margin: 20px auto;
+  padding: 10px 20px;
+  color: #fff;
+  border: none;
+  font-size: 20px;
+  border-radius: 8px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+li{
+  padding: 10px;
+  width: 100%;
 }
-
-.App-link {
-  color: #61dafb;
+.bg-dark {
+  background-color: #868686;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bg-primary {
+  background-color: #6cb5c2;
 }
